Fix #4: add max-height to images to prevent stretching on IOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,6 +370,7 @@ footer {
 
 .gallery-column img {
     padding: 1px; /*Small gap between images*/
+    max-height: 350px;
 }
 
 .gallery-block {
